syntax = "proto3";

package swisspension;

option csharp_namespace = "SwissPension.Todo.Common";

import "google/protobuf/empty.proto";

service Todo {
    // CreateList
    rpc CreateList(CreateListTodoRequest) returns (CreateListTodoResponse);
    // Add Item
    rpc AddItemToList(AddItemTodoRequest) returns (AddItemTodoResponse);
    // ReadItem
    rpc ReadItem(ReadItemTodoRequest) returns (ReadItemTodoResponse);
    // ReadAll Tasks
    rpc ReadLists(google.protobuf.Empty) returns (ListResponse);
    // UpdateItem
    rpc UpdateItem(UpdateItemTodoRequest) returns (UpdateItemTodoResponse);
    // DeleteItem
    rpc DeleteItem(DeleteItemTodoRequest) returns (DeleteItemTodoResponse);
    // MarkAsDone
    rpc MarkAsDone(MarkAsDoneTodoRequest) returns (MarkAsDoneTodoResponse);
}

// CreateList
message CreateListTodoRequest {
    string listName = 1;
}

message CreateListTodoResponse {
    int32 Id = 1;
}

// Add item
message AddItemTodoRequest {
    int32 TodoListId = 1;
    string ItemName  = 2;
}

message AddItemTodoResponse {
    int32 TodoListId = 1;
    int32 Id         = 2;
}

// ReadItem
message ReadItemTodoRequest {
    int32 TodoListId = 1;
    int32 Id         = 2;
}

message ReadItemTodoResponse {
    int32 TodoListId = 1;
    string ListName  = 2;
    int32 Id         = 3;
    string ItemName  = 4;
    bool IsDone      = 5;
}

// List Read
message ListResponse {
    repeated ListTodoItem Lists = 1;
}

message ListTodoItem {
    string ListName                     = 1;
    int32 Id                            = 2;
    repeated ReadItemTodoResponse Items = 3;
}

// UpdateItem
message UpdateItemTodoRequest {
    int32 TodoListId = 1;
    int32 Id         = 2;
    string ItemName  = 3;
    bool IsDone      = 4;
}

message UpdateItemTodoResponse {
    int32 TodoListId = 1;
    int32 Id         = 2;
}

// DeleteItem
message DeleteItemTodoRequest {
    int32 TodoListId = 1;
    int32 Id         = 2;
}

message DeleteItemTodoResponse {
    int32 TodoListId = 1;
    int32 Id         = 2;
}

// MarkAsDone
message MarkAsDoneTodoRequest {
    int32 TodoListId = 1;
    int32 Id         = 2;
}

message MarkAsDoneTodoResponse {
    int32 TodoListId = 1;
    int32 Id         = 2;
    string ItemName  = 3;
    bool IsDone      = 4;
}